# docs/swagger.json
@@ -76,7 +76,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dao.SmallInfo"
+                            "$ref": "#/definitions/dao.Courier"
                         }
                     },
                     "400": {
@@ -1135,6 +1135,9 @@
                     "type": "string"
                 },
                 "id": {
+                    "type": "integer"
+                },
+                "id_from_restaurant": {
                     "type": "integer"
                 },
                 "name": {
